<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SephTestApp</string>
    <string name="open_reviews">open reviews</string>
    <string name="item_image">item image</string>
    <string name="choose_reviews_order">choose reviews order</string>
    <string name="rating">Rating :</string>
    <string name="comment">Comment:</string>
    <string name="name">Name:</string>
    <string name="retry_button">refresh</string>
    <string name="hint_search">Search product</string>
    <string name="best_to_worst">Best to worst</string>
    <string name="worst_to_best">Worst to best</string>
    <string name="error_message">An error occurred please check your internet connection</string>
    <string name="unknown">Unknown</string>
    <string name="reviews">Reviews</string>
    <string name="warning_text">Could not reach the server please refresh !</string>
</resources>